--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,14 +1,41 @@
+body {
+  background-color: #FAFAFA;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*--we used this to edit the Home button--*/
 .pull-left {
-  padding-left: 20px;
-  padding-top: 8px;
+  margin-top: -10px;
+  margin-left: 40px;
 }
 
 .nav {
   padding-right: 20px;
-  padding-top: 5px;
+  margin-top: -15px;
 }
 
 .bg-info {
   height: 50px;
-  border-radius: 25px;
+
 }
+
+.intro {
+  text-align: center;
+}
+
+.jumbotron {
+  padding: 30px;
+  margin-top: 20px;
+}
+
+
+
+/*
+.columns {
+  color: #0B3861;
+}*/
